--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -8,9 +8,9 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KCZWJR44');</script>
     <!-- End Google Tag Manager -->
-        <title>Online Financial Calculator: Your Friendly Guide to Smarter Money Choices</title>
+        <title>How Can Financial Literacy Help You?</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Online Financial Calculator: Your Friendly Guide to Smarter Money Choices">
+        <meta name="description" content="How Can Financial Literacy Help You? A Friendly Guide to Understanding Your Money">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="scss/blogs-home-styling.css">
         <link rel="stylesheet" href="scss/sidebar-styling.css">
@@ -95,63 +95,77 @@
 
 <section class="blog-layout">
     <div class="blog-content">
-    <h1>Online Financial Calculator: Your Friendly Guide to Smarter Money Choices</h1>
-    <img src="blog-images/blog1-image.png" alt="Online Financial Calculator">
-    <p><span class="bold">Managing your finances can feel overwhelming</span> sometimes—but guess what? It doesn’t have to be. Thanks to free online personal finance 
-        calculators like the ones at <a href="../index.html">MoneyMatters.</a>, you don’t need to be a financial expert to make smart decisions. Whether 
-        you're a student learning how to budget, a parent planning for your child’s future, or someone thinking about retirement, these tools are 
-        designed for <span class="italics">you.</span></p>
+    <h1>How Can Financial Literacy Help You? A Friendly Guide to Understanding Your Money</h1>
+    <img src="blog-images/blog2-image.png" alt="Financial Literacy">
+    <p><span class="bold">Managing your money can seem confusing</span>-but gaining financial literacy makes it a lot easier. The good news? You don't need a finance degree or a high-paying job to be in control of your money.
+        Financial literacy is simply about understanding the basics of how money works—and using that knowledge to make better decisions.<br><br>
+
+        And just like learning to ride a bike, anyone can get the hang of it with the right tools on <a href="../index.html">MoneyMatters.</a> and a little practice.
+
+    </p>
     
-    <h2>What Are Online Financial Calculators?</h2>
-    <p>Online financial calculators are simple tools that help you understand your money. You plug in your income, expenses, savings, or 
-        investment info—and these tools crunch the numbers for you. They're ideal for a smooth introduction to personal finance without sitting 
-        down next to a stranger and sharing personal info.
-        And the best part? They’re completely free and secure. No downloads, no fees, just clarity.</p>
+    <h2>What is Financial Literacy</h2>
+    <p>Financial literacy means knowing how to budget, save, invest, manage debt, and plan for the future. It’s about understanding concepts like interest rates, credit scores, and compound growth in a way that you can apply into your life.<br><br>
+
+        It’s not about being perfect with money. It’s about being <span class="italics">informed</span>.
+    </p>
     
-    <h2>Why Everyone Can Benefit</h2>
-    <p>No matter where you are in life or what your financial situation looks like, there’s a tool that can help. Here are a few real-world 
-        examples of how people of all ages and stages can benefit:</p>
-    <h3>1. Budgeting: Keeping Track, Staying on Track</h3>
-    <p>Meet Sarah, a recent college graduate starting her first job. She wants to make sure her paycheck lasts the month, so she uses the 
-        <a href="../individual-tools/basic-tools/basic-budget-tool.html">Budgeting Calculator</a> to track rent, groceries, student loans, and her weekend fun. In just a few clicks, she can see where her money is 
-        going and start saving a little each month.<br><br>
-
-        Or consider James, a single dad raising two kids. With school supplies, groceries, and monthly bills, budgeting can get tricky. The 
-        online tool helps him set spending limits and find ways to save—without sacrificing quality of life for his family.
+    <h2>Why It Matters - for Everyone</h2>
+    <p>Financial literacy isn’t just for accountants or stock market pros. It’s for students figuring out how to afford school, parents planning for their kids’ futures, and anyone who wants to feel more confident with their money. Here’s how financial knowledge can make a real difference:</p>
+    <h3>1. Budgeting: Making Your Money Work for You</h3>
+    <p class="no-line">
+        Take Maya, a college student juggling classes and a part-time job. By learning how to create a simple monthly budget, she makes sure her rent, textbooks, and pizza nights all fit in without running out of cash. Or look at David, a retiree on a fixed income. Financial literacy helps him stretch his savings while still enjoying life.
     </p>
-    <h3>2. Investing: Growing Your Wealth at Any Age</h3>
-    <p>Alex, 30, just started learning about investing. Using the <a href="../individual-tools/basic-tools/basic-investment-tool .html">Investment Calculator</a>, they see how small monthly contributions to an 
-        investment account can grow over time. It’s motivating and helps build long-term wealth without taking big risks.<br><br>
-
-        On the other hand, Priya is in her 50s and wants to make sure her current investments will support her lifestyle after she retires. The 
-        calculator helps her compare different investment options and plan confidently.
+    <h3>2. Debt Management: Stay in Control, Not Overwhelmed</h3>
+    <p class="no-line">
+        Emma had several credit cards and a growing balance. After learning about interest rates and minimum payments, she created a payoff plan that saved her hundreds of dollars. Meanwhile, Carlos avoided taking on unnecessary debt by understanding loan terms before signing on the dotted line.
 
     </p>
-    <h3>3. Retirement: Planning Ahead with Confidence</h3>
-    <p>Even if retirement feels far away, it’s never too early to plan. Mia, a 25-year-old teacher, uses the <a href="../individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planner</a> to see how her 
-        savings today could lead to financial freedom later. It’s reassuring to know she’s on the right path.<br><br>
+    <h3>3. Saving and Investing: Building for the Future</h3>
+    <p>
+        Once you understand how saving and investing work, the future looks a lot brighter. Take Leo, who started putting $50 a month into a retirement account at age 24. Thanks to compound interest, he’s well on his way to financial freedom. Or consider Jasmine, who learned how to set aside money for emergencies—so when unexpected car repairs came up, she was ready.
 
-        Meanwhile, Robert is 60 and getting close to retirement. He inputs his savings and expected expenses into the tool to make sure he’ll 
-        have enough. It’s a great way to feel secure about his future and adjust if needed.
 
     </p>
-    <h2>Made for Everyone, by People Who Get It</h2>
-    <p>MoneyMatters. was created by two college friends who saw how confusing money can be—and wanted to do something about it. Their mission? 
-        Make high-quality financial tools that are free and easy to use, no matter your age, income, or experience.<br><br>
+    <h2>What Happens If You Don't Learn About Money</h2>
+    <p class="no-line">
+        While financial literacy opens doors, a lack of it can lead to serious trouble. Without basic money skills, it’s easy to fall into traps that are difficult—and sometimes impossible—to escape.<br><br>
 
-        They believe everyone deserves access to good financial advice and planning tools. And their calculators are designed with everyday 
-        people in mind—clear, straightforward, and practical.
+        Here are some real-world examples of what can go wrong:</p>
 
+        <ul>
+            <li>
+                <h3>Liam's Credit Card Spiral</h3><br>
+                <p class="no-line">Liam got his first credit card at 19 and thought of it as “free money.” He didn’t understand how interest worked and only paid the minimum each month. By the time he was 24, he had over $10,000 in debt and was paying more in interest than on the original purchases.</p>
+
+            </li>
+
+            <li>
+                <h3>Nina's Loan Nightmare</h3><br>
+                <p class="no-line">Nina signed for a high-interest car loan with monthly payments she couldn’t afford. She didn’t read the fine print, and after missing payments, her credit score tanked and her car was repossessed. Without transportation, she lost her job, and the cycle continued.</p>
+            </li>
+
+            <li>
+                <h3>Tyler's Retirement Wake-Up Call</h3><br>
+                <p class="no-line">Tyler always assumed Social Security would cover his retirement. He never saved or invested. At 60, he realized he couldn’t afford to stop working—but by then, his options were limited. A little knowledge early on could’ve changed everything.</p>
+            </li>
+        </ul>
+
+        <p>These aren’t scare tactics—they’re real-life lessons that show why financial literacy is so important.</p>
+    <h2>Knowledge Is Power - And Peace of Mind</h2>
+    <p>
+        Being financially literate doesn’t just help you make better money choices. It reduces stress, improves relationships, and gives you peace of mind. You don’t have to be rich to benefit—you just need to be aware.<br><br>
+
+        And the best part? There are free resources everywhere. From online calculators at <a href="../index.html">MoneyMatters.</a> and budgeting apps to community workshops and educational blogs, there’s no shortage of ways to get started.
     </p>
-    <h2>Take the First Step Today</h2>
-    <p>You don’t need a financial advisor to start making smarter money choices. With free tools from <a href="../index.html">MoneyMatters.</a>, you can create a budget, 
-        plan your investments, and prepare for retirement—all from your phone or computer.<br><br>
 
-        Taking control of your money doesn’t mean making huge changes overnight. It means understanding where you are and where you want to go. 
-        And these calculators can help you do just that.<br><br>
+    <h2>Start Today, Thank Yourself Tomorrow</h2>
+    <p>
+        Becoming financially literate is one of the most empowering things you can do. It opens doors, builds confidence, and puts you in charge of your financial future.<br><br>
 
-        So why wait? Start today. Your future self will thank you.
+        You don’t have to learn everything all at once. Start with the basics. Ask questions. Use free tools. And remember—you’re not alone on this journey.<br><br>
 
+        Because the more you understand your money, the more it works for <span class="italics">you</span>.
     </p>
     </div>
 
