--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -100,19 +100,20 @@
     <a href="blog1.html">
     <div class="blog-card">
       <h2 class="blog-title">Online Financial Calculator</h2>
-      <img src="../images/blog1-image.png" alt="Online Financial Calculator">
+      <img src="blog-images/blog1-image.png" alt="Online Financial Calculator">
       <p class="blog-excerpt">Your Friendly Guide to Smarter Money Choices</p>
       <a href="blog1.html" class="read-more">Read More</a>
       </a>
     </div>
   
-    <!--<div class="blog-card">
-      <h2 class="blog-title">Understanding Credit Scores</h2>
-      <p class="blog-excerpt">Learn what affects your credit score and how to improve it.</p>
-      <a href="blog-post-2.html" class="read-more">Read More</a>
+    <div class="blog-card">
+      <h2 class="blog-title">How Can Financial Literacy Help You?</h2>
+      <img src="blog-images/blog2-image.png" alt="Financial Literacy">
+      <p class="blog-excerpt">A Friendly Guide to Understanding Your Money</p>
+      <a href="blog2.html" class="read-more">Read More</a>
     </div>
   
-    <div class="blog-card">
+    <!--<div class="blog-card">
       <h2 class="blog-title">Top 5 Financial Mistakes to Avoid</h2>
       <p class="blog-excerpt">Avoid these common traps that can set back your financial health.</p>
       <a href="blog-post-3.html" class="read-more">Read More</a>
