finished the search bar, and embedded basic budget youtube vid

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -163,6 +163,8 @@
             <input type="text" id="searchInput" placeholder="Search blog..." autocomplete="off" onkeyup="searchPosts()" />
             <button onclick="searchAndRedirect()">🔍</button>
         </div>
+        <!-- Toast Notification -->
+        <div id="toast" class="toast">No blog post found.</div>
       
         <!-- CTA Box -->
         <div class="sidebar-box cta-box">
