--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -174,9 +174,11 @@
         <div class="sidebar-inner">
         <!-- Search Bar -->
         <div class="sidebar-box search-box">
-            <input type="text" id="searchInput" placeholder="Search blog..." autocomplete="off" onkeyup="searchPosts()" />
+            <input type="text" id="searchInput" placeholder="Search blog..." onkeyup="searchPosts()" />
             <button onclick="searchAndRedirect()">🔍</button>
         </div>
+        <!-- Toast Notification -->
+        <div id="toast" class="toast">No blog post found.</div>
       
         <!-- CTA Box -->
         <div class="sidebar-box cta-box">
