--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -120,7 +120,7 @@
                     </p>
                   </div>
                   
-                  <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/basic-budget-laptop.png" alt="Basic Budgeting Tool"></a>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/wcFdjhy02M8?si=x9AhWSFZZ3uvIO65" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="download-button">Download</a>
             </section>
 
