--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -113,6 +113,7 @@
                             <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to <span class="bold">share this information with a trusted financial advisor</span> to help you make the right choices to improve your financial health.</li>
 
                         </ul>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UBQnsUpxn1w?si=TM2EX8XQ25AeR5n7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         THIS IS NOT FINANCIAL ADVICE. INVESTMENTS HAVE RISK. MONEYMATTERS IS NOT RESPONSIBLE FOR ANY DECISION YOU MAKE BASED ON THE USE OF THESE TOOLS
                                             
                     </p>
