--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -221,10 +221,10 @@
 <footer>
 <p>MoneyMatters.</p>
 <nav>
-    <a href="index.html">Home</a>
-    <a href="tools.html">Tools</a>
-    <a href="aboutus.html">About Us</a>
-    <a href="blogs/blogs-home.html">Blogs</a>
+    <a href="../index.html">Home</a>
+    <a href="../tools.html">Tools</a>
+    <a href="../aboutus.html">About Us</a>
+    <a href="../blogs/blogs-home.html">Blogs</a>
 </nav>
 
 <div class="social-media">
