--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -81,7 +81,7 @@
                             <a href="../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
                                 <a href="../individual-tools/basic-tools/basic-budget-tool.html">Budgeting</a>
-                                <a href="../individual-tools/basic-tools/basic-investment-tool .html">Investment</a>
+                                <a href="../individual-tools/basic-tools/basic-investment-tool.html">Investment</a>
                                 <a href="../individual-tools/basic-tools/basic-retirement-tool.html">Retirement</a>
                                 <a href="../individual-tools/basic-tools/net-worth-calculator.html">Net Worth</a>
                                 <a href="../tools.html#advanced-tools">Advanced</a>
@@ -183,17 +183,17 @@
         <!-- CTA Box -->
         <div class="sidebar-box cta-box">
           <h3>🎯 Start Budgeting Smarter</h3>
-          <p>Download our free Basic Budget Planner and take control of your finances today.</p>
-          <a href="../individual-tools/basic-tools/basic-budget-tool.html" class="cta-button">Get the Free Tool</a>
+          <p>Download our Advanced Budget Planner and take control of your finances today.</p>
+          <a href="../individual-tools/advanced-tools/advanced-budget-tool.html" class="cta-button">Get the Advanced Tool</a>
         </div>
       
         <!-- Popular Posts -->
         <div class="sidebar-box popular-posts">
           <h3>🔥 Popular Posts</h3>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="blog1.html">Online Financial Calculator</a></li>
+            <li><a href="blog2.html">How Can Financial Literacy Help You?</a></li>
+            <li><a href="blog3.html">Where Can I Learn Financial Literacy?</a></li>
           </ul>
         </div>
     </div>
@@ -214,7 +214,7 @@
             <div>
                 <h3>Join the MoneyMatters. Community!</h3>
             </div>
-            <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
+            <form id="signup-form" action="POST" target="_blank" data-netlify="true">
                 <div class="row">
                   <div class="col">
                     <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -226,6 +226,7 @@
                 <div class="row" id="email">
                     <input type="text" name="email" class="form-control" placeholder="Email">
                 </div>
+                <div data-netlify-recaptcha="true"></div>
                 <button type="submit" class="submit-btn">Submit</button>
               </form>
         </div>
