--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -80,7 +80,7 @@
                             <a href="../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
                                 <a href="../individual-tools/basic-tools/basic-budget-tool.html">Budgeting</a>
-                                <a href="../individual-tools/basic-tools/basic-investment-tool .html">Investment</a>
+                                <a href="../individual-tools/basic-tools/basic-investment-tool.html">Investment</a>
                                 <a href="../individual-tools/basic-tools/basic-retirement-tool.html">Retirement</a>
                                 <a href="../individual-tools/basic-tools/net-worth-calculator.html">Net Worth</a>
                                 <a href="../tools.html#advanced-tools">Advanced</a>
@@ -113,11 +113,12 @@
       <a href="blog2.html" class="read-more">Read More</a>
     </div>
   
-    <!--<div class="blog-card">
-      <h2 class="blog-title">Top 5 Financial Mistakes to Avoid</h2>
-      <p class="blog-excerpt">Avoid these common traps that can set back your financial health.</p>
-      <a href="blog-post-3.html" class="read-more">Read More</a>
-    </div> -->
+    <div class="blog-card">
+      <h2 class="blog-title">Where Can I Learn Financial Literacy?</h2>
+      <img src="blog-images/blog3-image.png" alt="Financial Literacy">
+      <p class="blog-excerpt">A Friendly Guide to Getting Started</p>
+      <a href="blog3.html" class="read-more">Read More</a>
+    </div>
   
     <!-- Add more blog cards as needed -->
   </section>
@@ -135,7 +136,7 @@
             <div>
                 <h3>Join the MoneyMatters. Community!</h3>
             </div>
-            <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
+            <form id="signup-form" action="POST" target="_blank" data-netlify="true">
                 <div class="row">
                   <div class="col">
                     <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -147,6 +148,7 @@
                 <div class="row" id="email">
                     <input type="text" name="email" class="form-control" placeholder="Email">
                 </div>
+                <div data-netlify-recaptcha="true"></div>
                 <button type="submit" class="submit-btn">Submit</button>
               </form>
         </div>
