--- a/individual-tools/basic-tools/basic-investment-tool.html
+++ b/individual-tools/basic-tools/basic-investment-tool.html
@@ -80,7 +80,7 @@
                             <a href="../../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
                                 <a href="basic-budget-tool.html">Budgeting</a>
-                                <a href="basic-investment-tool .html">Investment</a>
+                                <a href="basic-investment-tool.html">Investment</a>
                                 <a href="basic-retirement-tool.html">Retirement</a>
                                 <a href="net-worth-calculator.html">Net Worth</a>
                                 <a href="../../tools.html#advanced-tools">Advanced</a>
@@ -113,13 +113,13 @@
                             <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to <span class="bold">share this information with a trusted financial advisor</span> to help you make the right choices to improve your financial health.</li>
 
                         </ul>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UBQnsUpxn1w?si=TM2EX8XQ25AeR5n7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        
                         THIS IS NOT FINANCIAL ADVICE. INVESTMENTS HAVE RISK. MONEYMATTERS IS NOT RESPONSIBLE FOR ANY DECISION YOU MAKE BASED ON THE USE OF THESE TOOLS
                                             
                     </p>
                   </div>
 
-                  <a href="https://docs.google.com/spreadsheets/u/1/d/19eVgUzvTuu0mPU0_3W_9WkS0-Z7P1TegxKM2F8NcCIs/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/basic-investment-laptop.png" alt="Basic Investment Tool"></a>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/UBQnsUpxn1w?si=TM2EX8XQ25AeR5n7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/19eVgUzvTuu0mPU0_3W_9WkS0-Z7P1TegxKM2F8NcCIs/copy?usp=sharing" class="download-button" target="_blank">Download</a>
             </section>
 
@@ -134,7 +134,7 @@
 
                     <div class="form-container">
                         <h3>Join the MoneyMatters. Community!</h3>
-                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
+                        <form id="signup-form" action="POST" target="_blank" data-netlify="true">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -146,6 +146,7 @@
                             <div class="row" id="email">
                                 <input type="text" name="email" class="form-control" placeholder="Email">
                             </div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button type="submit" class="submit-btn">Submit</button>
                           </form>
                     </div>
