--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -80,7 +80,7 @@
                             <a href="../../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
                                 <a href="basic-budget-tool.html">Budgeting</a>
-                                <a href="basic-investment-tool .html">Investment</a>
+                                <a href="basic-investment-tool.html">Investment</a>
                                 <a href="basic-retirement-tool.html">Retirement</a>
                                 <a href="net-worth-calculator.html">Net Worth</a>
                                 <a href="../../tools.html#advanced-tools">Advanced</a>
@@ -120,7 +120,7 @@
                     </p>
                   </div>
                   
-                  <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/net-worth-calculator-laptop.png" alt="Basic Budgeting Tool"></a>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/3smeCA_ysmY?si=ykUDNJh1piR1xUDm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" class="download-button" target="_blank">Download</a>
             </section>
 
@@ -135,7 +135,7 @@
 
                     <div class="form-container">
                         <h3>Join the MoneyMatters. Community!</h3>
-                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
+                        <form id="signup-form" action="POST" target="_blank" data-netlify="true">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -147,6 +147,7 @@
                             <div class="row" id="email">
                                 <input type="text" name="email" class="form-control" placeholder="Email">
                             </div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button type="submit" class="submit-btn">Submit</button>
                           </form>
                     </div>
