--- a/individual-tools/basic-tools/basic-retirement-tool.html
+++ b/individual-tools/basic-tools/basic-retirement-tool.html
@@ -80,7 +80,7 @@
                             <a href="../../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
                                 <a href="basic-budget-tool.html">Budgeting</a>
-                                <a href="basic-investment-tool .html">Investment</a>
+                                <a href="basic-investment-tool.html">Investment</a>
                                 <a href="basic-retirement-tool.html">Retirement</a>
                                 <a href="net-worth-calculator.html">Net Worth</a>
                                 <a href="../../tools.html#advanced-tools">Advanced</a>
@@ -138,31 +138,28 @@
                             <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to <span>share this information with a trusted financial advisor</span> to help you make the right choices to improve your financial health.</li>
 
                         </ul>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1dg7HVbzttU?si=qYBlWC76SSuK1Euj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         THIS IS NOT FINANCIAL ADVICE. INVESTMENTS HAVE RISK. MONEYMATTERS IS NOT RESPONSIBLE FOR ANY DECISION YOU MAKE BASED ON THE USE OF THESE TOOLS
                                             
                     </p>
                   </div>
+
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/1dg7HVbzttU?si=qYBlWC76SSuK1Euj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   
                   <section class="tool-grid">
                     <div class="tool-card">
                       <h2>Single and Working</h2>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-working-laptop.jpg" alt="Single and Working"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Single and Retired</h2>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-retired-laptop.jpg" alt="Single and Retired"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Working</h2>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-working-laptop.jpg" alt="Married and Working"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Retired</h2>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-retired-laptop.jpg" alt="Married and Retired"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                   </section>
@@ -180,7 +177,7 @@
 
                     <div class="form-container">
                         <h3>Join the MoneyMatters. Community!</h3>
-                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
+                        <form id="signup-form" action="POST" target="_blank" data-netlify="true">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -192,6 +189,7 @@
                             <div class="row" id="email">
                                 <input type="text" name="email" class="form-control" placeholder="Email">
                             </div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button type="submit" class="submit-btn">Submit</button>
                           </form>
                     </div>
